// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio component renders a disabled radio button 1`] = `
@media  {
  .c-bxybZx {
    -webkit-appearance: none;
    appearance: none;
    background-color: transparent;
    padding: 0;
    border-radius: var(--radii-round);
    border-color: var(--colors-secondary300);
    border-width: 2px;
    border-style: solid;
    cursor: pointer;
    height: 20px;
    width: 20px;
    display: inline-flex;
    align-items: center;
    justify-content: center;
    vertical-align: middle;
  }

  .c-bxybZx:focus {
    outline: none;
  }

  :checked + .c-bxybZx {
    background-color: var(--colors-secondary300);
  }

  [disabled] + .c-bxybZx {
    background-color: var(--colors-tonal600);
    border: 2px solid var(--colors-tonal600);
  }

  .c-ghCviE {
    height: var(--sizes-0);
    width: var(--sizes-0);
    border-radius: var(--radii-round);
    background-color: white;
  }
}

<div>
  <div
    class="c-PJLV"
    role="radiogroup"
  >
    <input
      disabled=""
      hidden=""
      type="radio"
      value="value"
    />
    <button
      aria-checked="false"
      aria-label="disabled indicator"
      class="c-bxybZx"
      data-disabled=""
      data-state="unchecked"
      disabled=""
      role="radio"
      tabindex="-1"
      type="button"
      value="value"
    />
  </div>
</div>
`;

exports[`Radio component renders a radio button 1`] = `
@media  {
  .c-bxybZx {
    -webkit-appearance: none;
    appearance: none;
    background-color: transparent;
    padding: 0;
    border-radius: var(--radii-round);
    border-color: var(--colors-secondary300);
    border-width: 2px;
    border-style: solid;
    cursor: pointer;
    height: 20px;
    width: 20px;
    display: inline-flex;
    align-items: center;
    justify-content: center;
    vertical-align: middle;
  }

  .c-bxybZx:focus {
    outline: none;
  }

  :checked + .c-bxybZx {
    background-color: var(--colors-secondary300);
  }

  [disabled] + .c-bxybZx {
    background-color: var(--colors-tonal600);
    border: 2px solid var(--colors-tonal600);
  }

  .c-ghCviE {
    height: var(--sizes-0);
    width: var(--sizes-0);
    border-radius: var(--radii-round);
    background-color: white;
  }
}

<div>
  <div
    class="c-PJLV"
    role="radiogroup"
  >
    <input
      hidden=""
      type="radio"
      value="value"
    />
    <button
      aria-checked="false"
      aria-label="indicator"
      class="c-bxybZx"
      data-radix-roving-focus-group-id="radix-id-0-1"
      data-state="unchecked"
      role="radio"
      tabindex="0"
      type="button"
      value="value"
    />
  </div>
</div>
`;
